--- a/client/index.html
+++ b/client/index.html
@@ -75,7 +75,7 @@
                 <p>{{TITLE}} is built by
                     <a href="https://www.freecodecamp.com/alamm">@alamm</a> of freecodecamp, following the instructions of
                     <a href="https://www.freecodecamp.com/challenges/build-a-pinterest-clone">"{{TITLE}} | Free Code Camp"</a></p>
-                <p>Github repository:<a href="https://github.com/ALamm/bumperstick">ALamm/{{TITLE}}</a></p>
+                <p>Github repository:<a href="https://github.com/ALamm/HeartFactor">ALamm/{{TITLE}}</a></p>
             </div>
         </div>
     </footer>
